package it.univaq.unigest.util;

public class DatabaseHelper {

    /**
     * Percorso della cartella principale in cui vengono salvati tutti i file dati dell'applicazione.
     */
    public static final String PERCORSO_CARTELLA_DATI = "src/main/resources/data";

}
